--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         </div>
     </div>
     <div id="logbox"></div>
-    <script src="./js/app.js"></script>
+    <script src="./dist/app.js"></script>
   </body>
 </html>
